# procedural-generation-2

./: Cargo.toml  README.md
src/: animations.rs  camera.rs  components.rs  constants.rs  controls.rs  main.rs  resources.rs  states.rs
src/coords/: coords.rs  point.rs
src/generation/: mod.rs
src/generation/debug/: tile_debugger.rs
src/generation/lib/: chunk.rs  components.rs  direction.rs  draft_tile.rs  layered_plane.rs  neighbours.rs  plane.rs  shared.rs  terrain_type.rs  tile.rs  tile_type.rs
src/generation/lib/resources/: asset_collection.rs  asset_pack.rs
src/generation/object/: mod.rs  object_generator.rs
src/generation/object/buildings/: mod.rs  registry.rs  templates.rs
src/generation/object/lib/: cell.rs  connection.rs  iteration_result.rs  object_data.rs  object_grid.rs  object_name.rs  tile_below.rs  tile_data.rs
src/generation/object/path/: mod.rs
src/generation/object/wfc/: mod.rs
src/generation/resources/: chunk_component_index.rs  generation_resources_collection.rs  metadata.rs
src/generation/world/: metadata_generator.rs  post_processor.rs  world_generator.rs
src/ui/: settings.rs
