[package]
name = "procedural-generation-2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["wayland", "bevy_camera_controller", "pan_camera"] }
bevy-inspector-egui = { version = "0.36.0" }
noise = { version = "0.9.0" }
rand = { version = "0.9.2" }
serde = { version = "1.0.228", features = ["derive"] }
bevy_common_assets = { version = "0.15.0", features = ["toml"] }
iyes_perf_ui = "0.5.0"
strum = { version = "0.27.2", features = ["derive"] }
bevy_framepace = "0.20.1"

[patch.crates-io]
iyes_perf_ui = { git = "https://github.com/blip-radar/iyes_perf_ui", branch = "bevy-0-18" }

#[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
incremental = false
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
